--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,12 +4,26 @@
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
+
+  <filter>
+    <filter-name>UncaughtExceptionFilter</filter-name>
+    <filter-class>com.local.filter.UncaughtExceptionFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>UncaughtExceptionFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+
+  <listener>
+    <listener-class>com.local.bootstrap.BootstrapListener</listener-class>
+  </listener>
+
   <servlet>
-    <servlet-name>com.local.servlet.usermanagement.AddUserServlet</servlet-name>
+    <servlet-name>AddUserServlet</servlet-name>
     <servlet-class>com.local.servlet.usermanagement.AddUserServlet</servlet-class>
   </servlet>
   <servlet-mapping>
-    <servlet-name>com.local.servlet.usermanagement.AddUserServlet</servlet-name>
+    <servlet-name>AddUserServlet</servlet-name>
     <url-pattern>/add-user</url-pattern>
   </servlet-mapping>
 </web-app>
