refactor: id as auto-incremented int not UUID

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,11 @@
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
 
+  <context-param>
+    <param-name>resources</param-name>
+    <param-value>/WEB-INF/classes/</param-value>
+  </context-param>
+
   <filter>
     <filter-name>UncaughtExceptionFilter</filter-name>
     <filter-class>com.local.filter.UncaughtExceptionFilter</filter-class>
