--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,12 @@
       <version>6.1.0</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.11.0</version>
+    </dependency>
+
   </dependencies>
   <build>
     <finalName>online-shop</finalName>
