--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,11 +5,6 @@
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
 
-  <context-param>
-    <param-name>resources</param-name>
-    <param-value>/WEB-INF/classes/</param-value>
-  </context-param>
-
   <filter>
     <filter-name>UncaughtExceptionFilter</filter-name>
     <filter-class>com.local.filter.UncaughtExceptionFilter</filter-class>
@@ -17,6 +12,15 @@
   <filter-mapping>
     <filter-name>UncaughtExceptionFilter</filter-name>
     <url-pattern>/*</url-pattern>
+  </filter-mapping>
+
+  <filter>
+    <filter-name>UserManagementServiceFilter</filter-name>
+    <filter-class>com.local.filter.UserManagementServiceFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>UserManagementServiceFilter</filter-name>
+    <url-pattern>/add-user</url-pattern>
   </filter-mapping>
 
   <listener>
