--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,12 @@
       <version>2.11.0</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.local</groupId>
+      <artifactId>object-validator</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+
   </dependencies>
   <build>
     <finalName>online-shop</finalName>
