--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,20 +7,24 @@
 
   <filter>
     <filter-name>UncaughtExceptionFilter</filter-name>
-    <filter-class>com.local.filter.UncaughtExceptionFilter</filter-class>
+    <filter-class>com.local.servlet.UncaughtExceptionFilter</filter-class>
   </filter>
+  <filter>
+    <filter-name>UserManagementFilter</filter-name>
+    <filter-class>com.local.servlet.usermanagement.UserManagementFilter</filter-class>
+  </filter>
+
   <filter-mapping>
     <filter-name>UncaughtExceptionFilter</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
-
-  <filter>
-    <filter-name>UserManagementServiceFilter</filter-name>
-    <filter-class>com.local.filter.UserManagementServiceFilter</filter-class>
-  </filter>
   <filter-mapping>
-    <filter-name>UserManagementServiceFilter</filter-name>
+    <filter-name>UserManagementFilter</filter-name>
     <url-pattern>/add-user</url-pattern>
+  </filter-mapping>
+  <filter-mapping>
+    <filter-name>UserManagementFilter</filter-name>
+    <url-pattern>/update-user</url-pattern>
   </filter-mapping>
 
   <listener>
