--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,8 +10,12 @@
     <filter-class>com.local.servlet.UncaughtExceptionFilter</filter-class>
   </filter>
   <filter>
-    <filter-name>UserManagementFilter</filter-name>
-    <filter-class>com.local.servlet.usermanagement.UserManagementFilter</filter-class>
+    <filter-name>AddUpdateUserFilter</filter-name>
+    <filter-class>com.local.servlet.usermanagement.AddUpdateUserFilter</filter-class>
+  </filter>
+  <filter>
+    <filter-name>GetDeleteUserFilter</filter-name>
+    <filter-class>com.local.servlet.usermanagement.GetDeleteUserFilter</filter-class>
   </filter>
 
   <filter-mapping>
@@ -19,12 +23,20 @@
     <url-pattern>/*</url-pattern>
   </filter-mapping>
   <filter-mapping>
-    <filter-name>UserManagementFilter</filter-name>
+    <filter-name>AddUpdateUserFilter</filter-name>
     <url-pattern>/add-user</url-pattern>
   </filter-mapping>
   <filter-mapping>
-    <filter-name>UserManagementFilter</filter-name>
+    <filter-name>AddUpdateUserFilter</filter-name>
     <url-pattern>/update-user</url-pattern>
+  </filter-mapping>
+  <filter-mapping>
+    <filter-name>GetDeleteUserFilter</filter-name>
+    <url-pattern>/get-user</url-pattern>
+  </filter-mapping>
+  <filter-mapping>
+    <filter-name>GetDeleteUserFilter</filter-name>
+    <url-pattern>/delete-user</url-pattern>
   </filter-mapping>
 
   <listener>
@@ -39,6 +51,14 @@
     <servlet-name>UpdateUserServlet</servlet-name>
     <servlet-class>com.local.servlet.usermanagement.UpdateUserServlet</servlet-class>
   </servlet>
+  <servlet>
+    <servlet-name>DeleteUserServlet</servlet-name>
+    <servlet-class>com.local.servlet.usermanagement.DeleteUserServlet</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>GetUserServlet</servlet-name>
+    <servlet-class>com.local.servlet.usermanagement.GetUserServlet</servlet-class>
+  </servlet>
 
   <servlet-mapping>
     <servlet-name>AddUserServlet</servlet-name>
@@ -47,5 +67,13 @@
   <servlet-mapping>
     <servlet-name>UpdateUserServlet</servlet-name>
     <url-pattern>/update-user</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>DeleteUserServlet</servlet-name>
+    <url-pattern>/delete-user</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>GetUserServlet</servlet-name>
+    <url-pattern>/get-user</url-pattern>
   </servlet-mapping>
 </web-app>
