--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -56,8 +56,8 @@
     <servlet-class>com.local.servlet.usermanagement.DeleteUserServlet</servlet-class>
   </servlet>
   <servlet>
-    <servlet-name>GetUserServlet</servlet-name>
-    <servlet-class>com.local.servlet.usermanagement.GetUserServlet</servlet-class>
+    <servlet-name>LoginServlet</servlet-name>
+    <servlet-class>com.local.servlet.usermanagement.LoginServlet</servlet-class>
   </servlet>
 
   <servlet-mapping>
@@ -73,7 +73,7 @@
     <url-pattern>/delete-user</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
-    <servlet-name>GetUserServlet</servlet-name>
-    <url-pattern>/get-user</url-pattern>
+    <servlet-name>LoginServlet</servlet-name>
+    <url-pattern>/login</url-pattern>
   </servlet-mapping>
 </web-app>
