--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -23,6 +23,10 @@
     <filter-class>com.local.servlet.LoggingFilter</filter-class>
   </filter>
   <filter>
+    <filter-name>AdminAuthorizationFilter</filter-name>
+    <filter-class>com.local.servlet.AdminAuthorizationFilter</filter-class>
+  </filter>
+  <filter>
     <filter-name>AddUpdateUserFilter</filter-name>
     <filter-class>com.local.servlet.usermanagement.AddUpdateUserFilter</filter-class>
   </filter>
@@ -34,6 +38,10 @@
   <filter-mapping>
     <filter-name>LoggingFilter</filter-name>
     <url-pattern>/*</url-pattern>
+  </filter-mapping>
+  <filter-mapping>
+    <filter-name>AdminAuthorizationFilter</filter-name>
+    <url-pattern>/add-user</url-pattern>
   </filter-mapping>
   <filter-mapping>
     <filter-name>AddUpdateUserFilter</filter-name>
