--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -34,6 +34,10 @@
     <filter-name>GetDeleteUserFilter</filter-name>
     <filter-class>com.local.servlet.usermanagement.GetDeleteUserFilter</filter-class>
   </filter>
+  <filter>
+    <filter-name>AddUpdateProductFilter</filter-name>
+    <filter-class>com.local.servlet.productmanagement.AddUpdateProductFilter</filter-class>
+  </filter>
 
   <filter-mapping>
     <filter-name>LoggingFilter</filter-name>
@@ -59,6 +63,10 @@
     <filter-name>GetDeleteUserFilter</filter-name>
     <url-pattern>/delete-user</url-pattern>
   </filter-mapping>
+  <filter-mapping>
+    <filter-name>AddUpdateProductFilter</filter-name>
+    <url-pattern>/add-product</url-pattern>
+  </filter-mapping>
 
   <listener>
     <listener-class>com.local.BootstrapListener</listener-class>
@@ -80,6 +88,14 @@
     <servlet-name>LoginServlet</servlet-name>
     <servlet-class>com.local.servlet.usermanagement.LoginServlet</servlet-class>
   </servlet>
+  <servlet>
+    <servlet-name>AddProductServlet</servlet-name>
+    <servlet-class>com.local.servlet.productmanagement.AddProductServlet</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>GetAllProductsServlet</servlet-name>
+    <servlet-class>com.local.servlet.productmanagement.GetAllProductsServlet</servlet-class>
+  </servlet>
 
   <servlet-mapping>
     <servlet-name>AddUserServlet</servlet-name>
@@ -96,5 +112,13 @@
   <servlet-mapping>
     <servlet-name>LoginServlet</servlet-name>
     <url-pattern>/login</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>AddProductServlet</servlet-name>
+    <url-pattern>/add-product</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>GetAllProductsServlet</servlet-name>
+    <url-pattern>/get-products</url-pattern>
   </servlet-mapping>
 </web-app>
