--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.example</groupId>
   <artifactId>online-shop</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>online-shop Maven Webapp</name>
-  <url>http://maven.apache.org</url>
+  <url>https://maven.apache.org</url>
   <properties>
     <maven.compiler.release>21</maven.compiler.release>
   </properties>
@@ -34,12 +34,6 @@
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
       <version>2.11.0</version>
-    </dependency>
-
-    <dependency>
-      <groupId>com.local</groupId>
-      <artifactId>object-validator</artifactId>
-      <version>1.0-SNAPSHOT</version>
     </dependency>
 
     <dependency>
