--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,3 +1,3 @@
-url=jdbc:h2:tcp://localhost/E:\\IDEA Codes\\online-shop\\db\\online-shop
+url=jdbc:h2:tcp://localhost/E:/IDEA Codes/online-shop/db/online-shop
 username=sa
 password=sa
