--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -24,19 +24,15 @@
   </filter>
   <filter>
     <filter-name>AdminAuthorizationFilter</filter-name>
-    <filter-class>com.local.servlet.AdminAuthorizationFilter</filter-class>
+    <filter-class>com.local.servlet.usermanagement.AdminAuthorizationFilter</filter-class>
   </filter>
   <filter>
     <filter-name>WebUserAuthorizationFilter</filter-name>
-    <filter-class>com.local.servlet.WebUserAuthorizationFilter</filter-class>
+    <filter-class>com.local.servlet.usermanagement.WebUserAuthorizationFilter</filter-class>
   </filter>
   <filter>
     <filter-name>AddUpdateUserFilter</filter-name>
     <filter-class>com.local.servlet.usermanagement.AddUpdateUserFilter</filter-class>
-  </filter>
-  <filter>
-    <filter-name>GetDeleteUserFilter</filter-name>
-    <filter-class>com.local.servlet.usermanagement.GetDeleteUserFilter</filter-class>
   </filter>
   <filter>
     <filter-name>AddUpdateProductFilter</filter-name>
@@ -64,18 +60,6 @@
     <url-pattern>/add-user</url-pattern>
   </filter-mapping>
   <filter-mapping>
-    <filter-name>AddUpdateUserFilter</filter-name>
-    <url-pattern>/update-user</url-pattern>
-  </filter-mapping>
-  <filter-mapping>
-    <filter-name>GetDeleteUserFilter</filter-name>
-    <url-pattern>/get-user</url-pattern>
-  </filter-mapping>
-  <filter-mapping>
-    <filter-name>GetDeleteUserFilter</filter-name>
-    <url-pattern>/delete-user</url-pattern>
-  </filter-mapping>
-  <filter-mapping>
     <filter-name>AddUpdateProductFilter</filter-name>
     <url-pattern>/add-product</url-pattern>
   </filter-mapping>
@@ -87,14 +71,6 @@
   <servlet>
     <servlet-name>AddUserServlet</servlet-name>
     <servlet-class>com.local.servlet.usermanagement.AddUserServlet</servlet-class>
-  </servlet>
-  <servlet>
-    <servlet-name>UpdateUserServlet</servlet-name>
-    <servlet-class>com.local.servlet.usermanagement.UpdateUserServlet</servlet-class>
-  </servlet>
-  <servlet>
-    <servlet-name>DeleteUserServlet</servlet-name>
-    <servlet-class>com.local.servlet.usermanagement.DeleteUserServlet</servlet-class>
   </servlet>
   <servlet>
     <servlet-name>LoginServlet</servlet-name>
@@ -112,14 +88,6 @@
   <servlet-mapping>
     <servlet-name>AddUserServlet</servlet-name>
     <url-pattern>/add-user</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-    <servlet-name>UpdateUserServlet</servlet-name>
-    <url-pattern>/update-user</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-    <servlet-name>DeleteUserServlet</servlet-name>
-    <url-pattern>/delete-user</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
     <servlet-name>LoginServlet</servlet-name>
