--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -17,10 +17,18 @@
     <param-name>relativeBatchLogOutputDirectory</param-name>
     <param-value>/WEB-INF/logs/</param-value>
   </context-param>
+  <context-param>
+    <param-name>relativeErrorResponseConfigFileLocation</param-name>
+    <param-value>/WEB-INF/classes/errorResponse.properties</param-value>
+  </context-param>
 
   <filter>
     <filter-name>LoggingFilter</filter-name>
     <filter-class>com.local.servlet.LoggingFilter</filter-class>
+  </filter>
+  <filter>
+    <filter-name>ErrorResponseFilter</filter-name>
+    <filter-class>com.local.servlet.ErrorResponseFilter</filter-class>
   </filter>
   <filter>
     <filter-name>AdminAuthorizationFilter</filter-name>
@@ -28,7 +36,7 @@
   </filter>
   <filter>
     <filter-name>WebUserAuthorizationFilter</filter-name>
-    <filter-class>com.local.servlet.WebUserAuthorizationFilter</filter-class>
+    <filter-class>com.local.servlet.usermanagement.WebUserAuthorizationFilter</filter-class>
   </filter>
   <filter>
     <filter-name>UserObjectValidationFilter</filter-name>
@@ -36,11 +44,15 @@
   </filter>
   <filter>
     <filter-name>ProductObjectValidationFilter</filter-name>
-    <filter-class>com.local.servlet.ProductObjectValidationFilter</filter-class>
+    <filter-class>com.local.servlet.productmanagement.ProductObjectValidationFilter</filter-class>
   </filter>
 
   <filter-mapping>
     <filter-name>LoggingFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+  <filter-mapping>
+    <filter-name>ErrorResponseFilter</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
   <filter-mapping>
