feat: added error response handling to implemented product services

--- a/src/main/resources/errorResponse.properties
+++ b/src/main/resources/errorResponse.properties
@@ -5,3 +5,6 @@ DAOException=503
 InvalidTokenException=403
 TokenExpiredException=403
 JsonFormatException=400
+DuplicateProductNameException=409
+NonPositiveProductCountException=422
+NonPositiveProductPriceException=422
