feat: finished global error response handling

--- a/src/main/resources/errorResponse.properties
+++ b/src/main/resources/errorResponse.properties
@@ -8,3 +8,4 @@ JsonFormatException=400
 DuplicateProductNameException=409
 NonPositiveProductCountException=422
 NonPositiveProductPriceException=422
+InvalidRequestObjectException=400
