feat: a synchronized test implementation of the purchase process and payment service added

--- a/src/main/resources/errorResponse.properties
+++ b/src/main/resources/errorResponse.properties
@@ -9,3 +9,7 @@ DuplicateProductNameException=409
 NonPositiveProductCountException=422
 NonPositiveProductPriceException=422
 InvalidRequestObjectException=400
+EmptyCartException=422
+InsufficientBalanceException=402
+InsufficientProductCountException=409
+NumberFormatException=400
