--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -30,14 +30,14 @@
     <filter-name>ErrorResponseFilter</filter-name>
     <filter-class>com.local.servlet.ErrorResponseFilter</filter-class>
   </filter>
-  <filter>
-    <filter-name>AdminAuthorizationFilter</filter-name>
-    <filter-class>com.local.servlet.usermanagement.AdminAuthorizationFilter</filter-class>
-  </filter>
-  <filter>
-    <filter-name>WebUserAuthorizationFilter</filter-name>
-    <filter-class>com.local.servlet.usermanagement.WebUserAuthorizationFilter</filter-class>
-  </filter>
+<!--  <filter>-->
+<!--    <filter-name>AdminAuthorizationFilter</filter-name>-->
+<!--    <filter-class>com.local.servlet.usermanagement.AdminAuthorizationFilter</filter-class>-->
+<!--  </filter>-->
+<!--  <filter>-->
+<!--    <filter-name>WebUserAuthorizationFilter</filter-name>-->
+<!--    <filter-class>com.local.servlet.usermanagement.WebUserAuthorizationFilter</filter-class>-->
+<!--  </filter>-->
   <filter>
     <filter-name>ObjectValidationFilter</filter-name>
     <filter-class>com.local.servlet.validation.ObjectValidationFilter</filter-class>
@@ -51,18 +51,18 @@
     <filter-name>ErrorResponseFilter</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
-  <filter-mapping>
-    <filter-name>AdminAuthorizationFilter</filter-name>
-    <url-pattern>/add-user</url-pattern>
-  </filter-mapping>
-  <filter-mapping>
-    <filter-name>AdminAuthorizationFilter</filter-name>
-    <url-pattern>/add-product</url-pattern>
-  </filter-mapping>
-  <filter-mapping>
-    <filter-name>WebUserAuthorizationFilter</filter-name>
-    <url-pattern>/get-products</url-pattern>
-  </filter-mapping>
+<!--  <filter-mapping>-->
+<!--    <filter-name>AdminAuthorizationFilter</filter-name>-->
+<!--    <url-pattern>/add-user</url-pattern>-->
+<!--  </filter-mapping>-->
+<!--  <filter-mapping>-->
+<!--    <filter-name>AdminAuthorizationFilter</filter-name>-->
+<!--    <url-pattern>/add-product</url-pattern>-->
+<!--  </filter-mapping>-->
+<!--  <filter-mapping>-->
+<!--    <filter-name>WebUserAuthorizationFilter</filter-name>-->
+<!--    <url-pattern>/get-products</url-pattern>-->
+<!--  </filter-mapping>-->
   <filter-mapping>
     <filter-name>ObjectValidationFilter</filter-name>
     <url-pattern>/add-user</url-pattern>
