feat: servlets and endpoints added for balance and card pay

--- a/src/main/resources/errorResponse.properties
+++ b/src/main/resources/errorResponse.properties
@@ -13,3 +13,4 @@ EmptyCartException=422
 InsufficientBalanceException=402
 InsufficientProductCountException=409
 NumberFormatException=400
+PendingPaymentNotFoundException=404
