--- a/src/main/resources/errorResponse.properties
+++ b/src/main/resources/errorResponse.properties
@@ -5,6 +5,7 @@ DAOException=503
 InvalidTokenException=403
 TokenExpiredException=403
 JsonFormatException=400
+ProductNotFoundException=409
 DuplicateProductNameException=409
 NonPositiveProductCountException=422
 NonPositiveProductPriceException=422
