feat: transaction manager ready to deploy. MemDAO must be made compliant

--- a/src/main/resources/errorResponse.properties
+++ b/src/main/resources/errorResponse.properties
@@ -16,3 +16,4 @@ InsufficientProductCountException=409
 NumberFormatException=400
 PendingPaymentNotFoundException=404
 PreviousPaymentPendingException=403
+TransactionException=503
