--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -32,11 +32,11 @@
   </filter>
   <filter>
     <filter-name>AdminAuthorizationFilter</filter-name>
-    <filter-class>com.local.servlet.usermanagement.AdminAuthorizationFilter</filter-class>
+    <filter-class>com.local.servlet.auth.AdminAuthorizationFilter</filter-class>
   </filter>
   <filter>
     <filter-name>WebUserAuthorizationFilter</filter-name>
-    <filter-class>com.local.servlet.usermanagement.WebUserAuthorizationFilter</filter-class>
+    <filter-class>com.local.servlet.auth.WebUserAuthorizationFilter</filter-class>
   </filter>
   <filter>
     <filter-name>ObjectValidationFilter</filter-name>
@@ -61,15 +61,15 @@
   </filter-mapping>
   <filter-mapping>
     <filter-name>ObjectValidationFilter</filter-name>
-    <url-pattern>/add-user</url-pattern>
+    <url-pattern>/admin/add-user</url-pattern>
   </filter-mapping>
   <filter-mapping>
     <filter-name>ObjectValidationFilter</filter-name>
-    <url-pattern>/add-product</url-pattern>
+    <url-pattern>/admin/add-product</url-pattern>
   </filter-mapping>
 
   <listener>
-    <listener-class>com.local.BootstrapListener</listener-class>
+    <listener-class>com.local.Bootstrap</listener-class>
   </listener>
 
   <servlet>
