--- a/src/main/resources/errorResponse.properties
+++ b/src/main/resources/errorResponse.properties
@@ -7,13 +7,12 @@ TokenExpiredException=401
 JsonFormatException=400
 ProductNotFoundException=409
 DuplicateProductNameException=409
-NonPositiveProductCountException=422
-NonPositiveProductPriceException=422
 InvalidRequestObjectException=400
 EmptyCartException=422
 InsufficientBalanceException=402
-InsufficientProductCountException=409
 NumberFormatException=400
 PendingPaymentNotFoundException=404
 PreviousPaymentPendingException=403
-TransactionException=503
+PaymentInProgressException=403
+WebPaymentException=503
+InvalidProductPriceException=422
